--- a/Style(portfolio).css
+++ b/Style(portfolio).css
@@ -1,6 +1,8 @@
 .content {
     background: url(background\ ver2.jpg);
     background-size: cover;
+    padding-top: 14px;
+    padding-bottom: 14px;
 }
 
 .footer {
@@ -8,8 +10,16 @@
     left: 0;
     bottom: 0;
     width: 100%;
-    background-color: rgb(93, 104, 109);
+    background-color: rgb(211, 211, 192);
     color: white;
     text-align: center;
     padding: 2px 0px 2px 0px;
 }
+
+.contact {
+    background: url(background\ ver2.jpg);
+    background-size: cover;
+    padding-top: 165px;
+    padding-bottom: 80px;
+}
+
